--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,7 +11,7 @@
 	},
 	"header": {
 		"features": "Features",
-		"inplementation": "inplementation",
+		"implementation": "Implementation",
 		"invoicing": "Invoicing",
 		"accounting": "Accounting",
 		"primary_button_text": "Contact us"
