create empty page for all the footer items

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,7 +35,15 @@
 		"partners":"partners",
 		"legal": "legal"
 	},	
-
+	"path_footer":{
+		"login": "/login",
+		"monolithon": "/monolithon",
+		"softwares": "/softwares",
+		"support": "/support",
+		"knowledge": "/knowledge",
+		"partners": "/partners",
+		"legal": "/legal"
+	},
 	"features": {
 		"learn_more": "Learn more",
 		"title": "Features",
