Add a new category How to  - Telepítés és beállítás

--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -43,7 +43,7 @@
 		"login": "https://erp.monolithon.com/login#login",
 		"monolithon": "/monolithon",
 		"softwares": "/szoftverek",
-		"support": "https://support.monolithon.com/",
+		"support": "https://support.monolithon.com",
 		"knowledge": "/tudasbazis",
 		"partners": "/partnerek",
 		"legal": "/jogok"
