--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -21,7 +21,7 @@
 	},
 
 	"path_header":{
-		"erpnext": "/jellemzok",
+		"erpnext": "/erpnext",
 		"implementation": "/uzemeltetes",
 		"invoicing": "/szamlazas",
 		"accounting": "/konyveles",
