--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -46,7 +46,7 @@
 		"support": "https://support.monolithon.com",
 		"knowledge": "/tudasbazis",
 		"partners": "/partnerek",
-		"status":"/statusz ",
+		"status":"https://status.monolithon.com/ ",
 		"legal": "/jogok"
 	  },	  
 	"features": {
