--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,7 +24,7 @@
 		"implementation": "/implementation",
 		"invoicing": "/invoicing",
 		"accounting": "/accounting",
-		"primary_button_text": "/Contactus"
+		"primary_button_text": "/contact"
 	},
 	"footer": {
 		"login": "Login",
