[FIX] edit tagline

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
 	"logo": {
-		"title": "Monolithon - ERPNext solutions"
+		"title": "Monolithon - ERPNext and more"
 	},
 	"hero": {
 		"title": "Supercharged web development!",
