--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -69,7 +69,7 @@
     "title": "Subscribe to our newsletter",
     "subtitle": "Get notified for all updates",
     "input_placeholder": "Enter your email",
-    "button_text": "Subscribe",
+    "button_text": "Submit",
     "privacy": "We care about the protection of your data. Read our",
     "privacy_link": "Privacy Policy.",
     "label_text": "Email Address"
