ui: added new nav bar menu (#2)
* ui: added new nav bar menu

* refactor: rmv contact us btn

* refactor: update sub menu

* fix: translation

* ui: updated link text for dark theme

* [FIX] edit submenu

* [FIX] edit submenu

* [FIX] edit submenu

* [FIX] edit tagline

* [NEW] odoo pages

* [NEW] vuestorefront pages

* [FIX] vuestorefront pages

* [FIX] vuestorefront pages

* [NEW] n8n pages

* [FIX] update menu items

* [NEW] qms page

* [FIX] qms page

* [FIX] qms page

* [FIX] qms page

* feat: updated QMS page

* fix: alignments

* merging main  (#16)

* ui: changed cookie consent button color

* fix: WIP custom logic

* refactor: now supporting category switching

* fix: links

* fix: selector for tag

* fix: small slash fix

* fix: updated consent css being used as path

* fix: blog tags fixed

* refactor: updated blog's tags

* fix: static path category creation

* [FIX] tags updated in en

* [FIX] tags updated in hu

* [FIX] content plus translation

* fix: path translation for '/hu'

---------

Co-authored-by: Monolithon Administrator <5338127+monolithonadmin@users.noreply.github.com>
Co-authored-by: Monolithonadmin <hello@monolithon.com>

* fix: language selector paths

---------

Co-authored-by: Monolithonadmin <hello@monolithon.com>
Co-authored-by: Monolithon Administrator <5338127+monolithonadmin@users.noreply.github.com>

--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -13,12 +13,13 @@
     "secondary_button_text": "Ugrás az alap verzióra"
   },
   "header": {
-    "erpnext": "Jellemzők",
-    "implementation": "Üzemeltetés",
-    "invoicing": "Számlázás",
-    "accounting": "Könyvelés",
-    "primary_button_text": "Kapcsolat"
-  },
+		"erpnext": "Jellemzők",
+		"implementation": "Üzemeltetés",
+		"invoicing": "Számlázás",
+		"accounting": "Könyvelés",
+		"primary_button_text": "Kapcsolat",
+		"odoo": "Odoo"
+	},
 
   "path_header": {
     "erpnext": "/erpnext",
