--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -1,6 +1,6 @@
 {
   "logo": {
-    "title": "Monolithon - ERPNext magyarul"
+    "title": "Monolithon - ERPNext, Odoo +"
   },
   "hero": {
     "title": "Erőteljes webfejlesztés!",
@@ -13,13 +13,13 @@
     "secondary_button_text": "Ugrás az alap verzióra"
   },
   "header": {
-		"erpnext": "Jellemzők",
-		"implementation": "Üzemeltetés",
-		"invoicing": "Számlázás",
-		"accounting": "Könyvelés",
-		"primary_button_text": "Kapcsolat",
-		"odoo": "Odoo"
-	},
+    "erpnext": "Jellemzők",
+    "implementation": "Üzemeltetés",
+    "invoicing": "Számlázás",
+    "accounting": "Könyvelés",
+    "primary_button_text": "Kapcsolat",
+    "odoo": "Odoo"
+  },
 
   "path_header": {
     "erpnext": "/erpnext",
