--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,7 +17,10 @@
     "implementation": "Implementation",
     "invoicing": "Invoicing",
     "accounting": "Accounting",
-    "primary_button_text": "Contact us"
+    "primary_button_text": "Contact us",
+    "cms_eCommerce": "CMS & eCommerce",
+    "qms_nav": "Queue Management System",
+    "integration_nav": "Integration & Automation"
   },
   "path_header": {
     "erpnext": "/erpnext",
