[NEW] shopify menu

--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -33,7 +33,8 @@
     "odoo": "/odoo-magyarul",
     "qms": "/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer",
     "vue-storefront": "/vuestorefront-headless-ecommerce",
-    "n8n": "/n8n-zapier-make-integromat"
+    "n8n": "/n8n-zapier-make-integromat",
+    "shopify": "/shopify-webaruhaz"
   },
   "footer": {
     "login": "Bejelentkezés",
