--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,7 +32,8 @@
     "qms": "/queue-management-system",
     "vue-storefront": "/vuestorefront-headless-ecommerce",
     "n8n": "/n8n-zapier-make-integromat",
-    "shopify": "/shopify-ecommerce"
+    "shopify": "/shopify-ecommerce",
+    "mautic": "/mautic-marketing-automation-platform"
   },
   "footer": {
     "login": "Login",
