--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -34,7 +34,8 @@
     "qms": "/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer",
     "vue-storefront": "/vuestorefront-headless-ecommerce",
     "n8n": "/n8n-zapier-make-integromat",
-    "shopify": "/shopify-webaruhaz"
+    "shopify": "/shopify-webaruhaz",
+    "mautic": "/mautic-marketing-automation-platform"
   },
   "footer": {
     "login": "Bejelentkezés",
