--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -35,7 +35,8 @@
     "vue-storefront": "/vuestorefront-headless-ecommerce",
     "n8n": "/n8n-zapier-make-integromat",
     "shopify": "/shopify-webaruhaz",
-    "mautic": "/mautic-marketing-automation-platform"
+    "mautic": "/mautic-marketing-automation-platform",
+    "astro": "/weboldal"
   },
   "footer": {
     "login": "Bejelentkezés",
