--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -36,7 +36,8 @@
     "n8n": "/n8n-zapier-make-integromat",
     "shopify": "/shopify-webaruhaz",
     "mautic": "/mautic-marketing-automation-platform",
-    "astro": "/static-site-generator"
+    "astro": "/static-site-generator",
+    "frappe": "/frappe-framework"
   },
   "footer": {
     "login": "Bejelentkezés",
