[FIX] footer and qms page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -46,7 +46,7 @@
     "partners": "Partners",
     "status": "Status ",
     "legal": "Legal",
-    "details": "© Monolithon - Monolith Online - ERPNext & Frappe support - Disclaimer: Public advertisements do not constitute an offer."
+    "details": "© Monolithon - Monolith Online - ERPNext, Frappe and Odoo support - Disclaimer: Public advertisements do not constitute an offer."
   },
   "path_footer": {
     "login": "https://erp.monolithon.com/login#login",
