--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -48,7 +48,7 @@
     "partners": "Partnerek",
     "status": "Státusz ",
     "legal": "Jogok",
-    "details": "© Monolithon - Monolith Online - ERPNext és Frappe magyarul Az oldalon található információk ajánlatnak nem minősülnek."
+    "details": "© Monolithon - Monolith Online - ERPNext, Frappe és Odoo magyarul - Az oldalon található információk ajánlatnak nem minősülnek."
   },
   "path_footer": {
     "login": "https://erp.monolithon.com/login#login",
